# vncpp

./: .gitignore  CMakeLists.txt  cmake_gen.sh
cmake/: check_and_create_dir.sh  copy_target.cmake
examples/: CMakeLists.txt
examples/CtaBacktesting/: CMakeLists.txt  backtesting.config  runBacktesting.cpp
examples/CtaTrading/: CMakeLists.txt  ctaSettings.json  runCtaTrading.cpp
vncpp/: CMakeLists.txt
vncpp/api/: CMakeLists.txt  gateway.h
vncpp/app/: CMakeLists.txt
vncpp/app/algoTrading/: CMakeLists.txt  algoEngine.h  algoTemplate.h
vncpp/app/ctaStrategy/: BacktestingEngine.h  CMakeLists.txt  ctaBase.h  ctaEngine.cpp  ctaEngine.h  ctaStrategy.cpp  ctaStrategy.h  ctaTemplate.cpp  ctaTemplate.h
vncpp/app/ctaStrategy/strategy/: CMakeLists.txt  StrategyKingKeltner.cpp  dllmain.cpp
vncpp/event/: CMakeLists.txt  eventData.h  eventEngine.cpp  eventEngine.h
vncpp/gateway/: gateway.h
vncpp/gateway/ctp/: CMakeLists.txt  ctpGateway.cpp  ctpGateway.h
vncpp/log/: CMakeLists.txt  log.cpp  logging.h
vncpp/trader/: CMakeLists.txt  FilePersistenceContainer.h  vtApp.h  vtEngine.cpp  vtEngine.h  vtGateway.h  vtObject.h  vtPersistence.cpp  vtPersistence.h  vtPersistenceContainerBase.cpp  vtPersistenceContainerBase.h  vtStrategy.h
