INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/vncpp/log)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/vncpp/api)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/vncpp/data)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/vncpp/event)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/vncpp/trader)

#LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/vncpp/log)
#LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/vncpp/api)
#LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/vncpp/data)
#LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/vncpp/event)
#LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/vncpp/trader)

ADD_SUBDIRECTORY(log)
#ADD_SUBDIRECTORY(api)
#ADD_SUBDIRECTORY(data)
ADD_SUBDIRECTORY(event)
ADD_SUBDIRECTORY(trader)


