INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/vncpp/log)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/vncpp/app)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/vncpp/gateway)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/vncpp/data)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/vncpp/event)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/vncpp/trader)

#LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/vncpp/log)
#LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/vncpp/api)
#LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/vncpp/data)
#LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/vncpp/event)
#LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/vncpp/trader)

ADD_SUBDIRECTORY(ctaStrategy)


